Show unsplashed holes as connection

--- a/lib/wanderer_app_web/live/maps/maps_live.html.heex
+++ b/lib/wanderer_app_web/live/maps/maps_live.html.heex
@@ -463,6 +463,11 @@
                           field={f[:show_temp_system_name]}
                           label="Allow hierarchical numbering (Temporary Name)"
                         />
+                        <.input
+                          type="checkbox"
+                          field={f[:create_placeholder_systems]}
+                          label="Create placeholder systems from wormholes"
+                        />
                       </div>
                     </div>
 
